--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Numéria: Desafio de Aleatório</title>
-  <link rel="stylesheet" href="ADVnum.css"/>
+  <link rel="stylesheet" href="style.css"/>
 </head>
 <body>
   <div class="bagulho">
@@ -72,4 +72,5 @@
   <div class="toast" id="toast">Mensagem<b></b></div>                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                       
   <script src="ADVnum.js"></script>
 </body>
+
 </html
